--- a/scrapes/scrapy.cfg
+++ b/scrapes/scrapy.cfg
@@ -4,8 +4,8 @@
 # http://doc.scrapy.org/en/latest/topics/scrapyd.html
 
 [settings]
-default = bowerypresents.settings
+default = scrapes.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = bowerypresents
+project = scrapes
